# FluxMacro

./: .gitignore  CMakeLists.txt  CMakePresets.json  FluxMacro.iss  FluxMacro_codesign.cer  LICENSE  README.md  build_flux.bat  build_installer.bat  deploy.bat  sign_app.ps1
CMakeProject1/: CMakeLists.txt  CUsersmedinbuild_out.txt
CMakeProject1/qml/: AutoClickerPage.qml  MacroPage.qml  MonitorPage.qml  SettingsPage.qml  main.qml
CMakeProject1/qml/components/: AnimButton.qml  GlassCard.qml  HotkeyPicker.qml  ModernSlider.qml  NavButton.qml  SectionLabel.qml  StatusPill.qml  TitleBar.qml  ToggleSwitch.qml  qmldir
CMakeProject1/src/: AppSettings.cpp  AppSettings.h  AutoClicker.cpp  AutoClicker.h  HotkeyManager.cpp  HotkeyManager.h  InputSimulator.cpp  InputSimulator.h  MacroEngine.cpp  MacroEngine.h  SafeZoneChecker.cpp  SafeZoneChecker.h  SystemMonitor.cpp  SystemMonitor.h  TrayHelper.cpp  TrayHelper.h  WindowHelper.cpp  WindowHelper.h  main.cpp
